Updated Code
Now can add features separately. Can only add a existing feature to a trail. When deleting a trail no longer clears the features table. When deleting a trail, the trail location points are deleted. Removed admin view and instead replaced with trail details view
